--- a/exercises/04-Move-DOM-Element/index.html
+++ b/exercises/04-Move-DOM-Element/index.html
@@ -3,11 +3,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
+		<link rel="stylesheet" type="text/css" href="styles.css" />
 		<title>MOVE DOM ELEMENT</title>
 	</head>
 	<body>
 		<div id="wulu">
-			This is the wulu div
+			This is the wulu div ness
 		</div>
     
     <script src="./index.js"></script>
