--- a/exercises/10-Add-li-on-Click/index.html
+++ b/exercises/10-Add-li-on-Click/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<script type="text/javascript" src="/path/to/numberToWords.min.js"></script>
+		
 		<title>ADD li ON CLICK</title>
 	</head>
 	<body>
@@ -14,5 +14,6 @@
 			<li>Third element</li>
 		</ul>
 		<script src="./index.js"></script>
+		<script src="./numberToWords.min.js"></script>
 	</body>
 </html>
