--- a/exercises/13-Todo-List/index.html
+++ b/exercises/13-Todo-List/index.html
@@ -13,13 +13,13 @@
 			<input id="addToDo" type="text" placeholder="Add to do here" />
 			<ul>
 				<li>
-					<span><i class="fa fa-trash" onclick="deleteIconClick()"></i></span> Eat
+					<span><i class="fa fa-trash"></i></span> Eat
 				</li>
 				<li>
-					<span><i class="fa fa-trash" onclick="deleteIconClick()"></i></span> Drink
+					<span><i class="fa fa-trash" ></i></span> Drink
 				</li>
 				<li>
-					<span><i class="fa fa-trash" onclick="deleteIconClick()"></i></span> Sleep
+					<span><i class="fa fa-trash" ></i></span> Sleep
 				</li>
 			</ul>
 		</div>
